started working on user delete

--- a/css/team.css
+++ b/css/team.css
@@ -485,6 +485,14 @@ h6.description {
 	opacity: 1;
 }
 
+.profile .user-buttons {
+	visibility: hidden;
+}
+
+.profile:hover .user-buttons {
+	visibility: visible;
+}
+
 .img-box ul{
 	position: absolute;
 	z-index: 2;
