--- a/css/workflow.css
+++ b/css/workflow.css
@@ -33,6 +33,12 @@
 	min-height: 380px;
 }
 
+.task-history-view {
+	display: none;
+	position: relative;
+	min-height: 380px;
+}
+
 .comment-input {
 	position: absolute;
 	bottom: 0px;
@@ -461,6 +467,19 @@
 	}
 }
 /**/
+
+
+table {
+    //border: 1px solid green;
+    border-collapse: collapse;
+    width:100%;
+}
+
+table td {
+    //border: 1px solid green;
+    width: 50px;
+    //white-space: nowrap;
+}
 
 
 
