--- a/css/login.css
+++ b/css/login.css
@@ -2,20 +2,18 @@
     background-color: white;
 }
 
-#loginbox 
-{
-
-    //margin-top: 30px;
+#login-box {
     margin-top: 18%;
-
 }
 
-#login-button
-{
+#signup-box {
+    margin-top: 14%;
+    display: none;
+}
 
+.login-button {
   margin-top:15px;
   height: 40px;
-
 }
 
 #loginbox > div:first-child {        
@@ -43,35 +41,4 @@
 .panel-body {
     padding-top: 30px;
     background-color: rgba(2555,255,255,.3);
-}
-
-#particles {
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
-    top: 0;                        
-    bottom: 0;
-    left: 0;
-    right: 0;
-    position: absolute;
-    z-index: -2;
-}
-
-.iconmelon,
-.im {
-  position: relative;
-  width: 150px;
-  height: 150px;
-  display: block;
-  fill: #525151;
-}
-
-.iconmelon:after,
-.im:after {
-  content: '';
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
 }
