--- a/css/boards.css
+++ b/css/boards.css
@@ -164,6 +164,16 @@ footer{
 	position: absolute;
 }
 
+.search-bar {
+	position: fixed; 
+	z-index: 10; 
+	width: 300px; 
+	margin: 5% auto; 
+	left: 0; 
+	right: 0; 
+	margin-top:10px;
+}
+
 .create-board-button 
 {
 	height:120px; 
